# sgg_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
env_sgg/: pyvenv.cfg
env_sggutils/: pyvenv.cfg
env_sggutils/Scripts/: activate  activate.bat  fixup_bigquery_storage_v1_keywords.py
sgg_utils/: sgg_utils.py
src/sgg_utils/: cloud_utils.py  foreup_utils.py  sgg_utils.py
test/: test_sgg.py
