[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='sgg_utils'
version = '0.0.6'
authors = [
  { name="Michael Futch", email="michael.d.futch@gmail.com" },
]
description='Tools for interacting with the ForeUp API.'
readme='README.md'
url='https://github.com/michaeldfutch/sgg_utils'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]
